--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@
 
 .menu ul li {
     margin: 0 20px; 
-
+    
 }
 
 .menu ul li a {
@@ -40,7 +40,7 @@
     font-family: Rubik;
     font-weight: 400;
     line-height: 18.96px;
-
+    
 }
 .menu ul li a:hover {
     color:#8CC5F9; 
@@ -98,7 +98,7 @@
 .dropdown-menu li a:hover { 
     color:#8CC5F9; 
     font-weight: bold;
-
+    
 }
 
 .language:hover .dropdown-menu {
@@ -142,8 +142,8 @@
     line-height: 30px;
     text-align: left;
     margin-left: 135px;
-
-
+    
+    
 }
 
 .text-content .highlight {
@@ -170,8 +170,8 @@
     left: 928px;
     gap: 0px;
     opacity: 0px;  
-   
-
+    
+    
 }
 
 /*meet team memberrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr */
@@ -217,8 +217,8 @@
     height: 119px;
     margin-bottom: 26px;
     margin-top: 26px;
-   
-  
+    
+    
 }
 
 .member h3 {
@@ -238,7 +238,7 @@
     font-style: italic;
     font-weight: 700;
     text-align: center;
-
+    
 }
 
 .member a {
@@ -273,7 +273,7 @@
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
     position: relative;
     text-align: center;
-  
+    
 }
 
 .quote img{
@@ -284,7 +284,7 @@
     justify-content: center;
     margin-top: 70px;
     margin-bottom: 80px;
-  
+    
 }
 .quote p{
     margin-left: 150px;
@@ -298,7 +298,7 @@
     line-height: 39.11px;
     text-align: left;
     color:#4F4F4F;
-
+    
 }
 .quote h3{
     font-family: Rubik;
@@ -318,22 +318,22 @@
 }
 
 .wrapp-four-root h1{
-font-family: Rubik;
-font-size: 35px;
-font-weight: bold;
-line-height: 41.48px;
-text-align: center;
-margin-top: 185px;
-margin-bottom: -121px;
-color: #4F4F4F;
-
+    font-family: Rubik;
+    font-size: 35px;
+    font-weight: bold;
+    line-height: 41.48px;
+    text-align: center;
+    margin-top: 185px;
+    margin-bottom: -121px;
+    color: #4F4F4F;
+    
 }
 .number{
     max-width: 193px;
     max-height: 227px;
     margin-top:144px ;
     margin-left :159px ;
-
+    
 }
 
 .four-root {
@@ -347,8 +347,8 @@ color: #4F4F4F;
     align-items: center;
     margin-bottom: 30px;
     margin-left: -60px;
-
-  
+    
+    
 }
 .root1 {
     display: flex;
@@ -377,114 +377,114 @@ color: #4F4F4F;
     margin-bottom: 30px; 
     color: #8CC5F9;
     margin-top: 60px; 
-    }
-    
+}
+
 .text-box p {
-        color: #555;
-        line-height: 1.6;
-        font-family: Rubik;
-        font-size: 35px;
-        font-weight: 500;
-        line-height: 41.48px;
-        text-align: left;
-    }
-   
-   /*footerrrrrrrrrrrrrrrrrrrrrrrr*/
+    color: #555;
+    line-height: 1.6;
+    font-family: Rubik;
+    font-size: 35px;
+    font-weight: 500;
+    line-height: 41.48px;
+    text-align: left;
+}
+
+/*footerrrrrrrrrrrrrrrrrrrrrrrr*/
 
 
-    .footer {
-        display: flex;
-        flex-wrap: wrap; 
-        justify-content: space-between;
-        padding: 20px;
-        background-color: #F8F8F8;
-        max-width: 100%;
-        width: 1440px;
-        margin: 0 auto;
-        z-index: -1;
-       
-    }
+.footer {
+    display: flex;
+    flex-wrap: wrap; 
+    justify-content: space-between;
+    padding: 20px;
+    background-color: #F8F8F8;
+    max-width: 100%;
+    /* width: 1440px; */
+    margin: 0 auto;
+    z-index: -1;
     
-    .left {
-        max-width: 50%; 
-        margin-left: 150px; 
-    }
-    .logo1{
-        margin-top: 183.1px;
-        width: 232px;
-        height: 43.91px;
-        
-    }
-    .left p{
-        font-family: Rubik;
-        font-size: 18px;
-        font-weight: 400;
-        line-height: 30px;
-        text-align: left;
-        color: #BDBDBD;
-        max-width: 400px;
+}
 
-    }
-    .right {
-        max-width: 50%; 
-        display: flex;
-        justify-content: space-between; 
-        margin-left: 185px; 
-    }
+.left {
+    max-width: 50%; 
+    margin-left: 150px; 
+}
+.logo1{
+    margin-top: 183.1px;
+    width: 232px;
+    height: 43.91px;
     
-    .social {
-        display: flex;
-        justify-content: flex-start;
-        gap: 20px;
-        margin-top: 20px; 
-    }
-    .image {
-        width: 50px;
-        height: 50px;
-    }
+}
+.left p{
+    font-family: Rubik;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    text-align: left;
+    color: #BDBDBD;
+    max-width: 400px;
     
-    .col-1, .col-2, .col-3 {
-        flex: 1;
-        padding: 10px;
-        margin-right: 121px;
-        margin-top: 183.12px;
-    }
-    
-    h3 {
-        font-family: Rubik;
-        font-size: 18px;
-        font-weight: bold;
-        line-height: 30px;
-        text-align: left;
-        color:#0B132A;
+}
+.right {
+    max-width: 50%; 
+    display: flex;
+    justify-content: space-between; 
+    /* margin-left: 185px;  */
+}
 
-        
-    }
+.social {
+    display: flex;
+    justify-content: flex-start;
+    gap: 20px;
+    margin-top: 20px; 
+}
+.image {
+    width: 50px;
+    height: 50px;
+}
+
+.col-1, .col-2, .col-3 {
+    flex: 1;
+    padding: 10px;
+    margin-right: 121px;
+    margin-top: 183.12px;
+}
+
+h3 {
+    font-family: Rubik;
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 30px;
+    text-align: left;
+    color:#0B132A;
     
-    ul {
-        list-style-type: none;
-        padding: 0;
-        font-family: Rubik;
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 30px;
-        text-align: left;
-        color: #4F5665;
-    }
     
-    li {
-        margin-bottom: 5px;
-    } 
-    
-  
-   
-    
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+    font-family: Rubik;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 30px;
+    text-align: left;
+    color: #4F5665;
+}
+
+li {
+    margin-bottom: 5px;
+} 
+
+
+
+
 /*positionnnnnnnnnnnnnnnnnnnnnnnnnnnn*/
 .position {
-    position: absolute;
-    height: 233px;
-    margin-top: -116.5px;
-   margin-left: 100px;
+    /* position: absolute; */
+    /* height: 233px; */
+    margin-top: 116.5px;
+    margin-left: 100px;
     opacity: 0px;
     background-color: white;
     display: flex;
@@ -494,81 +494,84 @@ color: #4F4F4F;
     padding: 20px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
     z-index: 1; 
-    width: 1140px;
+    /* width: 1140px; */
+    
+}
 
+.position-right {
+    width: 100%;
+    margin-left: 80px;
+    display: flex;
+    justify-content: space-between;
 }
 
 
-    .position-img{
-        width: 172px;
-        height: 134px;
-        top: 4273px;
-        left: 196px;
-        gap: 0px;
-        opacity: 0px;
-        
-        
-    }
-    .position-center{
-        width: 50%;
-        margin-left:80px;
-    }
-    .font{
-        font-family: Rubik;
-        font-size: 35px;
-        font-weight: bold;
-        line-height: 45px;
-        text-align: left;
-        
-    }
-    .font2{
-        font-family: Rubik;
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 30px;
-        text-align: left;
-        margin-top: 19.5px;
-        
-        
-    }
-    .see-img{
-        width: 250px;
-        height: 105.29px;
-        top: 4295.5px;
-        left: 970px;
-        gap: 0px;
-        border-radius: 10px 0px 0px 0px;
-        opacity: 0px;
-
-    }
-   
-
+.position-img{
+    /* width: 172px; */
+    height: 134px;
+    top: 4273px;
+    left: 196px;
+    gap: 0px;
+    opacity: 0px;
+    
+    
+}
+.position-center{
+    /* width: 50%; */
+    /* margin-left:80px; */
+}
+.font{
+    font-family: Rubik;
+    font-size: 35px;
+    font-weight: bold;
+    line-height: 45px;
+    text-align: left;
+    
+}
+.font2{
+    font-family: Rubik;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 30px;
+    text-align: left;
+    margin-top: 19.5px;
+    
+    
+}
+.see-img{
+    width: 250px;
+    height: 105.29px;
+    top: 4295.5px;
+    left: 970px;
+    gap: 0px;
+    border-radius: 10px 0px 0px 0px;
+    opacity: 0px;
+    
+}
 
 
-
-    @media (max-width: 768px) {
+@media (max-width: 1200px) {
+    /* header */
     .header {
         flex-direction: column;
         align-items: center;
         padding: 20px;
     }
-   
-    
 
-    .menu ul {
-        flex-direction: column;
-        align-items: center;
+    .language {
+        margin-right: 0;
     }
 
+    /* about */
     .about-us {
         flex-direction: column;
-        align-items: center; 
+        align-items: center;
         padding: 20px;
     }
 
     .text-content {
-        max-width: 100%; 
-        text-align: center; 
+        max-width: 100%;
+        text-align: center;
     }
 
     .image-content {
@@ -577,15 +580,55 @@ color: #4F4F4F;
 
     }
 
+    /* position */
+    .position-right {
+        flex-direction: column;
+    }
+
+    /* footer */
+    .left {
+        /* max-width: 0%; */
+        margin-left: 25px;
+        text-align: center;
+    }
+
+    .right {
+        /* max-width: 100%; */
+        margin-left: 0;
+
+        justify-content: center;
+        /* flex-direction: column; */
+        align-items: center;
+    }
+
+    .col-1,
+    .col-2,
+    .col-3 {
+        margin-right: 25px;
+    }
+    
+}
+
+
+@media (max-width: 768px) {
+    
+    
+    .menu ul {
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    
+    
     .text-content h2 {
         font-size: 2rem;
     }
-
+    
     .team-member {
         grid-template-columns: 1fr;
         padding: 0;
     }
-
+    
     .loadmore {
         font-size: 18px;
     }
@@ -593,60 +636,58 @@ color: #4F4F4F;
         flex-direction: column; 
         align-items: center; 
     }
-
-    .left {
-        max-width: 0%; 
-        margin-left: 0; 
-        text-align: center; 
-    }
-
-    .right {
-        max-width: 100%; 
-        margin-left: 0;
-         
-        justify-content: center;
-        flex-direction: column;
-        align-items: center;  
-    }
-
+    
+    
+    
     .social {
         margin-top: 10px; 
     }
-    
-     .position {
-            flex-direction: column; 
-            align-items: center;
-            width: 50%; 
-            margin-left: 0; 
-            padding: 10px; 
-            box-sizing: border-box;
-        }
-    
-        .position-img {
-            width: 100px; 
-            height: auto;
-        }
-    
-        .position-center {
-            margin-left: 0;
-            text-align: center; 
-            width: 100%;
-        }
-    
-        .font {
-            font-size: 24px;
-            line-height: 32px;
-        }
-    
-        .font2 {
-            font-size: 14px; 
-            line-height: 24px;
-        }
-    
-        .see-img {
-            width: 150px; 
-            height: auto;
-        }
+
+    .position {
+        margin-left: 25px;
     }
     
+    /* .position {
+        flex-direction: column; 
+        align-items: center;
+        width: 50%; 
+        margin-left: 0; 
+        padding: 10px; 
+        box-sizing: border-box;
+    } */
+    
+    .position-img {
+        width: 100px; 
+        height: auto;
+    }
+    
+    /* .position-center {
+        margin-left: 0;
+        text-align: center; 
+        width: 100%;
+    } */
+    
+    .font {
+        font-size: 24px;
+        line-height: 32px;
+    }
+    
+    .font2 {
+        font-size: 14px; 
+        line-height: 24px;
+    }
+    
+    .see-img {
+        width: 150px; 
+        height: auto;
+    }
+
+    /* numbers */
+    .wrapp-four-root img {
+        margin-left: 25px;
+    }
+
+    
+}
+
 
