--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,12 +1,6 @@
 // Variables
-$max-width: 1440px;
-$main-color: #4A90E2;
-$hover-color: #8CC5F9;
-$text-color: #666;
-$bg-color: #fff;
-$border-color: #ddd;
-$shadow-color: rgba(0, 0, 0, 0.1);
-$font-family: 'Rubik', sans-serif;
+
+
 
 @import "vars";
 @import "mixin";
@@ -51,7 +45,7 @@ $font-family: 'Rubik', sans-serif;
                     line-height: 18.96px;
 
                     &:hover {
-                        color: #8CC5F9; 
+                        color: $hover-color; 
                         font-weight: bold;
                         text-decoration: underline;
                     }
@@ -120,8 +114,6 @@ $font-family: 'Rubik', sans-serif;
 }
 //-------------------------------------------------------------------------------------------
 
-  
-    
 
     .tech {
         display: flex;
@@ -139,13 +131,13 @@ $font-family: 'Rubik', sans-serif;
 
             h2 {
                 font-size: 2.5rem; 
-                color: #8CC5F9; 
+                color: $hover-color; 
                 font-family: $font-family;
                 font-family: Rubik;
-font-size: 50px;
-font-weight: 700;
-line-height: 70px;
-text-align: left;
+                font-size: 50px;
+                font-weight: 700;
+                line-height: 70px;
+                text-align: left;
 
             }
 
@@ -204,7 +196,7 @@ text-align: left;
     
             >div {
                 >span {
-                    font-family:Rubik;
+                    font-family:$font-family;
                     color: rgba(11, 19, 42, 1);
                     font-size: 25px;
                     font-weight: 800;
@@ -507,12 +499,12 @@ text-align: left;
         }
     
         &::-webkit-scrollbar-track {
-          background-color: #f1f1f1;
+          background-color: $bg-color;
         }
     
         .item {
           flex: 0 0 auto;
-          background-color: #f9f9f9;
+          background-color: $bg-color;
           border: 1px solid #ddd;
           border-radius: 10px;
           padding: 20px;
@@ -581,7 +573,7 @@ text-align: left;
     }
 
     p {
-      font-family: Rubik;
+      font-family: $font-family;
       font-size: 18px;
       font-weight: 400;
       line-height: 30px;
@@ -618,7 +610,7 @@ text-align: left;
       margin-top: 183.12px;
 
       h3 {
-        font-family: Rubik;
+        font-family: $font-family;
         font-size: 18px;
         font-weight: bold;
         line-height: 30px;
@@ -629,7 +621,7 @@ text-align: left;
       ul {
         list-style-type: none;
         padding: 0;
-        font-family: Rubik;
+        font-family: $font-family;
         font-size: 16px;
         font-weight: 400;
         line-height: 30px;
