--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -6,3 +6,12 @@ $bg-color: #fff;
 $border-color: #ddd;
 $shadow-color: rgba(0, 0, 0, 0.1);
 $font-family: 'Rubik', sans-serif;
+$max-width: 1440px;
+$main-color: #4A90E2;
+$hover-color: #8CC5F9;
+$text-color: #666;
+$bg-color: #fff;
+$border-color: #ddd;
+$shadow-color: rgba(0, 0, 0, 0.1);
+$font-family: 'Rubik', sans-serif;
+$background-color: #fff;
