--- a/scss/style.scss
+++ b/scss/style.scss
@@ -635,12 +635,12 @@
     }
   }
 }
-
+//---------------------------------------------------------------------
     @media (max-width: 768px) {
-        // .menu ul {
-        //     flex-direction: column;
-        //     align-items: center;
-        // }
+        .menu ul {
+            flex-direction: column;
+            align-items: center;
+        }
         
         .content-better {
             .title {
@@ -692,4 +692,173 @@
           align-items: center;
         }
       }
+
+      @media (max-width: 1200px) {
+        .container {
+            padding: 0 20px;
+        }
+    
+        .header {
+            padding: 50px 40px;
+    
+            .logo {
+                img {
+                    max-width: 180px; 
+                }
+            }
+    
+            .menu {
+                ul {
+                    li {
+                        margin: 0 10px; 
+                    }
+                }
+            }
+    
+            .language {
+                margin-left: 50px; 
+            }
+        }
+    
+        .tech {
+            flex-direction: column; 
+            padding: 20px;
+            margin-left: 0;
+    
+            .tech-content {
+                h2 {
+                    font-size: 2rem; 
+                    line-height: 1.2;
+                }
+    
+                p {
+                    font-size: 1rem; 
+                }
+            }
+    
+            .tech-img {
+                margin-top: 20px;
+            }
+        }
+    
+        .feature {
+            flex-direction: column; 
+            margin-left: 0;
+            margin-right: 0;
+            margin-top: 100px;
+            margin-bottom: 100px;
+    
+            img {
+                max-width: 100%;
+                margin-bottom: 20px;
+            }
+    
+            .feature-content {
+                margin-left: 0;
+                padding: 0 20px;
+                justify-content: center;
+    
+                h3 {
+                    font-size: 1.8rem; 
+                }
+    
+                .feature-col {
+                    .row1, .row2, .row3, .row4 {
+                        h4 {
+                            font-size: 0.9rem;
+                        }
+                    }
+                }
+            }
+        }
+    
+        .quantity {
+            gap: 20px; 
+            max-width: 100%;
+    
+            > .item {
+                gap: 10px;
+                margin-left: 0;
+                
+                > img {
+                    width: 50px; 
+                }
+    
+                > div {
+                    > span {
+                        font-size: 20px; 
+                    }
+    
+                    > p {
+                        font-size: 16px;
+                    }
+                }
+            }
+        }
+    
+        .content-best-product {
+            margin-left: 0;
+            padding: 0 20px;
+    
+            .title {
+                h1 {
+                    font-size: 1.8rem;
+                }
+    
+                p {
+                    font-size: 1rem;
+                    margin-left: 10%;
+                    margin-right: 10%;
+                }
+            }
+    
+            .product-grid {
+                grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); 
+    
+                .product-card {
+                    padding: 15px;
+    
+                    h3 {
+                        font-size: 1rem;
+                        padding-left: 20px;
+                    }
+    
+                    p {
+                        font-size: 0.9rem;
+                        margin-left: 20px;
+                        margin-right: 20px;
+                    }
+    
+                    .info-button {
+                        margin-left: 20px;
+                    }
+                }
+            }
+        }
+    
+        .footer {
+            padding: 10px;
+            flex-direction: column;
+    
+            .left, .right {
+                max-width: 100%;
+                margin-left: 20%;
+                text-align: center;
+    
+                p {
+                    max-width: 100%;
+                }
+            }
+    
+            .social {
+                justify-content: center;
+            }
+    
+            .col-1, .col-2, .col-3 {
+                margin-right: 0;
+                margin-top: 30px;
+            }
+        }
+    }
+    
 }
